<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_comunicacao_alerta_cnpj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/alerta_consulta"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/acitivity_comunicacao_cnpj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/cnpj"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_comunicacao_alerta_cnpj"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/activity_comunicacao_botao_consulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/realizar_consulta"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/acitivity_comunicacao_cnpj"
        app:layout_constraintStart_toStartOf="@+id/acitivity_comunicacao_cnpj"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_comunicacao_cnpj"
        android:focusable="true" />

    <TextView
        android:id="@+id/activity_comunicacao_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/resultado_consulta"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/activity_comunicacao_botao_consulta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/activity_comunicacao_botao_consulta"
        app:layout_constraintTop_toBottomOf="@+id/activity_comunicacao_botao_consulta" />

    <EditText
        android:id="@+id/acitivity_comunicacao_info_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusable="false"
        android:hint="@string/nome_empresa"
        android:inputType="none"
        android:textColor="@android:color/darker_gray"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_comunicacao_info"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/acitivity_comunicacao_info_tipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusable="false"
        android:hint="@string/tipo_empresa"
        android:inputType="none"
        android:textColor="@android:color/darker_gray"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_comunicacao_info_nome"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/acitivity_comunicacao_info_data_situacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusable="false"
        android:hint="@string/data_situacao"
        android:inputType="none"
        android:textColor="@android:color/darker_gray"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_comunicacao_info_tipo"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/acitivity_comunicacao_info_motivo_situacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusable="false"
        android:hint="@string/motivo_situacao"
        android:inputType="none"
        android:textColor="@android:color/darker_gray"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_comunicacao_info_data_situacao"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>